# TiffSplitter

./: CMakeLists.txt  README.md
include/: ScanImageTiff.h  bitstrm.hpp  stringmagic.hpp  utils.hpp  write_tiff.h
src/: ScanImageTiff.cpp  bitstrm.cpp  main.cpp  utils.cpp  write_tiff.cpp
